# pku3b_AI

./: .gitignore  Cargo.toml  README.md  README_zh.md  requirements.txt
.github/workflows/: ci.yml
doc/: mcp_tool_summary.md  usage.md
pku3b/: Cargo.toml
pku3b/src/: lib.rs  multipart.rs  utils.rs
pku3b/src/api/: low_level.rs  mod.rs  tree.rs
pku3b/src/cli/: cmd_assignment.rs  cmd_video.rs
pku3b_ai/: agent_config.py  main_dispatch_test.py  mcp_filesystem_server.py  mcp_pku3b_server.py  mcp_servers_config.json
pku3b_ai/llm_interface/: auth.py  dispatcher.py  download_assignment.py  download_document.py  download_video.py  entry_summary.py  generate_input_models.py  input_models.py  list_announcements.py  list_assignments.py  list_course_tree.py  list_courses.py  list_documents.py  list_entry_children.py  list_unsubmitted_assignments.py  search_announcements_by_title.py  search_assignments_by_title.py  search_documents_by_title.py  search_entry_by_title.py  search_videos_by_title.py  submit_assignment.py  tool_registry.py  tools.py
pku3b_ai/schema/: download_assignment.json  download_document.json  download_video.json  entry_summary.json  list_announcements.json  list_assignments.json  list_course_tree.json  list_courses.json  list_documents.json  list_entry_children.json  list_unsubmitted_assignments.json  search_announcements_by_title.json  search_assignments_by_title.json  search_documents_by_title.json  search_entry_by_title.json  search_videos_by_title.json  submit_assignment.json
pku3b_py/: Cargo.toml  pyproject.toml
pku3b_py/src/: lib.rs
(+2 files in other folders)
